# mai25-bds-trafic-cycliste

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  MANISFEST.in  README.md  noxfile.py  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  epic.md  user_story.md
.github/workflows/: ci.yeml  ci_branch.yml  ci_main.yml  test.yml
config/: config.yaml
my_project/: dataframe_common.py  seaborn_common.py
notebooks/: 00_dataviz_generic_bokeh.ipynb  00_dataviz_netflix_imdb_seaborn.ipynb  00_dataviz_velib_plotly.ipynb  00_dataviz_velib_project.ipynb  00_exploratory_analysis.ipynb  00_exploratory_analysis_generic_bokeh.ipynb  00_exploratory_analysis_netflix_imdb_seaborn.ipynb  00_exploratory_analysis_velib_plotly.ipynb  00_exploratory_analysis_wines_classification.ipynb  00_exploratory_dataviz_netflix_imdb_seaborn.ipynb  01_dataviz_netflix_imdb_seaborn.ipynb  01_exploratory_learning_wines_classification.ipynb  01_machine_learning_wines_classification.ipynb  11_machine_learning_wines_classification_LogReg_SVM.ipynb  12_machine_learning_digits_classification copy.ipynb  12_machine_learning_digits_classification_KNN.ipynb  13_machine_learning_breast_cancer_classification.ipynb  13_machine_learning_breast_cancer_classification_DTree.ipynb  14_machine_learning_letters_classification_ABoost_Bagging copy.ipynb  15_machine_learning_churn_classification_ForestTree.ipynb  15_machine_learning_churn_classification_RFC.ipynb  16_machine_learning_diabete_classification_Voting_Stacking.ipynb  17_machine_learning_adult_classification_GBT.ipynb  17_machine_learning_adult_classification_XGBoost_LCE.ipynb  21_machine_learning_automobile_regression_Linear.ipynb  21_machine_learning_automobile_regression_Linear_mono_multi.ipynb  22_machine_learning_automobile_regression_Linear_ElasticNet.ipynb  22_machine_learning_nba_regression_Linear_ElasticNet.ipynb  31_machine_learning_ruspini_clustering_K-Means.ipynb  _2_machine_learning_trafic_cycliste.ipynb
notebooks/learning/: 01_dataviz_netflix_imdb_seaborn.ipynb  02_dataviz_generic_bokeh.ipynb  11_machine_learning_wines_classification_LogReg_SVM.ipynb  11_machine_learning_wines_classification_LogReg_SVM_MLP.ipynb  12_machine_learning_digits_classification_KNN.ipynb  13_machine_learning_breast_cancer_classification_DTree.ipynb  14_machine_learning_letters_classification_ABoost_Bagging copy.ipynb  14_machine_learning_letters_classification_ABoost_Bagging.ipynb  15_machine_learning_churn_classification_RFC.ipynb  16_machine_learning_diabete_classification_Voting_Stacking.ipynb  17_machine_learning_adult_classification_XGBoost_LCE.ipynb  21_machine_learning_automobile_regression_Linear_mono_multi.ipynb  22_machine_learning_nba_regression_Linear_ElasticNet.ipynb  31_machine_learning_ruspini_clustering_K-Means.ipynb  32_machine_learning_fromage_clustering_CAH.ipynb  33_machine_learning_bird_clustering_MeanShift.ipynb  41_machine_learning_advanced_loan_survival.ipynb  41_machine_learning_loan_survival.ipynb  42_machine_learning_advanced_titanic_pipelines.ipynb  43_machine_learning_advanced_goodread_recommendation.ipynb
notebooks/project/: 01_dataviz_trafic_cycliste_remy.ipynb  01_etapes1a2_trafic_cycliste_comptage_velo.ipynb  02_etapes2_trafic_cycliste_dataviz_metier.ipynb  03_etapes1a2_trafic_cycliste_enrich_with_meteo.ipynb  03_etapes1a2_trafic_cycliste_enrich_with_meteo_holidays.ipynb  11_etapes3_trafic_cycliste_comptage_velo_regression_et_ARIMA.ipynb  11_etapes3_trafic_cycliste_comptage_velo_series_temporelle.ipynb  Stats vélo Elias.ipynb  X1_etapes1a5_trafic_cycliste_dispo_velib_template_fullchain.ipynb  XX_trafic_cycliste_full.ipynb  carte_perf_sites.html  carte_sites_cercles.html  carte_sites_comptage.html
resources/input/: velib-disponibilite-en-temps-reel.csv
smartcheck/: __init__.py  classification_common.py  dataframe_common.py  dataframe_project_specific.py  logger_config.py  meta_search_common.py  paths.py  preprocessing_project_specific.py
smartcheck/resources/: config.yaml  wines.csv
tests/: test_classification_common.py  test_dataframe_common.py  test_dataframe_project_specific.py  test_logger_config.py  test_meta_search_common.py  test_paths.py  test_preprocessing_project_specific.py
