[build-system]
requires = ["setuptools~=80.8.0"]
build-backend = "setuptools.build_meta"


[project]
name = "avr25-mle-velib"
version = "0.1.1"
description = "velib data science project for MLE april 2025 promotion"
authors = [
    {name = "Rémy CANAL", email = "remy.canal@live.fr"},
    {name = "Elias DJOUADI", email = "dummy@mail.com"},
    {name = "Raphaël PARMENTIER", email = "dummy@mail.com"},
]
requires-python = "==3.12.*"
license = "MIT"
dependencies = [
    # dependencies for data science
    "pandas==2.2.3",
    "numpy==2.2.6",
    "matplotlib==3.10.3",
    "seaborn==0.13.2",
    "plotly==6.1.1",
    "bokeh==3.7.3",
    "statsmodels==0.14.4",
    "scikit-learn==1.6.1",
    # dependencies for configuration and project management
    "PyYAML==6.0.2",
    "pyproj==3.7.1",
    # dependencies for web communication
    "requests==2.32.3",
]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent"
]

# dependencies activated with "pip install .[dev]"
[project.optional-dependencies]
dev = [
    # dependencies for local testing and coverage tracking
    "pytest==8.3.5",
    "coverage==7.8.2",
    "pytest_cov==6.1.1",
    # dependencies for jupyter notebooks
    "notebook==7.4.3",
    # dependencies for code quality
    "flake8==7.2.0",
]

[project.readme]
file = "README.md"
content-type = "text/markdown" 

[project.urls]
"Source" = "https://github.com/zheddhe/avr25-mle-velib"


[tool.setuptools]
packages = {find = {}}
include-package-data = true

[tool.setuptools.package-data]
"smartcheck" = ["resources/*.yaml"]

[tool.pytest.ini_options]
addopts = "--cov=smartcheck --cov-report=term --cov-report=html --cov-report=annotate --cov-config=.coveragerc"
testpaths = ["tests"]
pythonpath = ["."]

